--- a/index.html
+++ b/index.html
@@ -1,95 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1,
-  maximum-scale=5"
-    />
-
-    <link rel="icon" href="devchallenges.png" />
-
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="https://devchallenges.io/"
-    />
-
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="photos/devchallenges.png">
+    <link rel="shortcut icon" type="image/x-icon" href="https://devchallenges.io/">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
     <title>Devchallenges</title>
-
-    <style>
-      body {
-        font-family: "Poppins", sans-serif;
-      }
-
-      ul {
-        padding-left: 24px;
-      }
-
-      li {
-        margin-bottom: 8px;
-      }
-
-      .welcome {
-        max-width: 800px;
-        margin: 0 auto;
-      }
-
-      .welcome-text {
-        margin-top: 30vh;
-        font-weight: 500;
-      }
-
-      .welcome-text p {
-        font-size: 1rem;
-        font-weight: 400;
-      }
-
-      .welcome-text h1 {
-        font-size: 1.5rem;
-      }
-
-      .welcome-text a {
-        color: #f7542e;
-      }
-    </style>
   </head>
   <body>
-    <div class="welcome">
-      <div class="welcome-text">
-        <h1>
-          Welcome to
-          <a href="https://devchallenges.io/" target="_blank"
-            >devchallenges.io</a
-          >
-        </h1>
-
-        <p>
-          If you have any questions, don't hesitate to ask on Discord. Here are
-          7 general steps to complete the challenge:
-        </p>
+    <h1>Checkout</h1>
+    <div class="cont">
+      <div class="main">
+        
       </div>
-
-      <ul>
-        <li><b>Step 1:</b> Create a new repository on github</li>
-        <li><b>Step 2:</b> Copy resources, README.md to your repository</li>
-        <li>
-          <b>Step 3:</b> Login to Figma to checkout font, color, spacing,..
-        </li>
-        <li><b>Step 4:</b> Complete all user stories</li>
-        <li><b>Step 5:</b> Update README.md</li>
-        <li><b>Step 6:</b> Deploy your app and submit your solution</li>
-        <li>
-          <b>Step 7:</b> Share your solution on Discord, Twitter and other
-          platforms to ask for feedback
-        </li>
-      </ul>
+      <div class="items">
+        <div class="item">
+          <div>
+            <img src="photos/photo1.png" alt="">
+          </div>
+          <div class="info">
+            <div>
+              <h3>Vintage Backbag</h3>
+              <div class="flex">
+                <span class="orange mr-5">$54.99</span><span>$94.99</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <div>
+            <img src="photos/photo2.png" alt="">
+          </div>
+          <div class="info">
+            <div>
+              <h3>Levi Shoes</h3>
+              <div class="flex">
+                <span class="orange mr-5">$74.99</span><span>$124.99</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div style="margin-top: 3rem;">
+          <div class="summary">
+            <p>Shipping</p>
+            <p>$19</p>
+          </div>
+          <div class="summary">
+            <p>Total</p>
+            <p>$148.98</p>
+          </div>
+        </div>1
+      </div>
     </div>
+    <footer>created by <a href="https://github.com/msn-05">msn-05</a> - <a href="https://devchallenges.io">devchallenges.io</a></footer>
   </body>
 </html>
