--- a/index.html
+++ b/index.html
@@ -6,44 +6,115 @@
     <link rel="icon" href="photos/devchallenges.png">
     <link rel="shortcut icon" type="image/x-icon" href="https://devchallenges.io/">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous">
     <link href="styles.css" rel="stylesheet">
+    <script src="script.js"></script>
     <title>Devchallenges</title>
   </head>
   <body>
     <h1>Checkout</h1>
     <div class="cont">
       <div class="main">
-        
+        <form action="#" id="form">
+          <fieldset>
+            <h3>Contact information</h3>
+            <label for="">E-mail</label>
+            <div class="input-container">
+              <input required="true" id="email" type="email" placeholder="Enter your email...">
+              <i class="fas fa-envelope"></i>
+            </div>
+            <label for="">Phone</label>
+            <div class="input-container">
+              <input required="true" id="phone" type="tel" placeholder="Enter your phone...">
+              <i class="fas fa-phone-alt"></i>
+            </div>
+          </fieldset>
+          <fieldset>
+            <h3>Shipping address</h3>
+            <label for="">Full name</label>
+            <div class="input-container">
+              <input required="true" type="text" placeholder="Your fullname..">
+              <i class="fas fa-user-circle"></i>
+            </div>
+            <label for="">Address</label>
+            <div class="input-container">
+              <input required="true" type="text" placeholder="Your address..">
+              <i class="fas fa-home"></i>
+            </div>
+            <label for="">City</label>
+            <div class="input-container">
+              <input required="true" type="text" placeholder="Your city..">
+              <i class="fas fa-city"></i>
+            </div>
+            <div class="form-additional">
+              <div style="margin-right: 10px;">
+                <label for="">Country</label>
+                <div class="input-container">
+                  <select required="true" name="country" id="country">
+                    <option value="" selected disabled>Your country..</option>
+                    <option value="ban">Bangladesh</option>
+                    <option value="uk">UK</option>
+                    <option value="us">USA</option>
+                  </select>
+                  <span class="select"></span>
+                  <i class="fas fa-globe-americas"></i>
+                </div>
+              </div>
+              <div style="margin-left: 10px;">
+                <label for="">Postal code</label>
+                <div class="input-container">
+                  <i class="fas fa-address-card"></i>
+                  <input required="true" type="text" placeholder="Your postal code...">
+                </div>
+              </div>
+            </div>
+            <div class="save-info">
+              <input type="checkbox" name="" id="save-info">
+              <label for="save-info">Save this information for next time</label>
+            </div>
+          </fieldset>
+          <button form="form" id="submit" type="submit">Continue</button>
+        </form>
       </div>
       <div class="items">
         <div class="item">
-          <div>
-            <img src="photos/photo1.png" alt="">
+          <div style="flex:50%;max-width:50%">
+            <img src="photos/photo1.png" style="width:100%;border-radius:15px">
           </div>
           <div class="info">
             <div>
               <h3>Vintage Backbag</h3>
               <div class="flex">
-                <span class="orange mr-5">$54.99</span><span>$94.99</span>
+                <span class="orange mr-5">$54.99</span><span><del>$94.99</del></span>
               </div>
             </div>
+            <div class="quantity">
+              <button class="plus" onclick="plus(this.nextElementSibling)">&plus;</button>
+              <p class="text">1</p>
+              <button class="minus" onclick="minus(this.previousElementSibling)">&minus;</button>
+            </div>
           </div>
-        </div>
+        </div><br><br>
         <div class="item">
-          <div>
-            <img src="photos/photo2.png" alt="">
+          <div style="flex:50%;max-width:50%">
+            <img src="photos/photo2.png" style="width:100%;border-radius:15px">
           </div>
           <div class="info">
             <div>
               <h3>Levi Shoes</h3>
               <div class="flex">
-                <span class="orange mr-5">$74.99</span><span>$124.99</span>
+                <span class="orange mr-5">$74.99</span><span><del>$124.99</del></span>
               </div>
+            </div>
+            <div class="quantity" style="top:45%">
+              <button class="plus" onclick="plus(this.nextElementSibling)">&plus;</button>
+              <p class="text">1</p>
+              <button class="minus" onclick="minus(this.previousElementSibling)">&minus;</button>
             </div>
           </div>
         </div>
         <div style="margin-top: 3rem;">
-          <div class="summary">
+          <div class="summary" style="border-top:1px solid grey;border-bottom:1px solid grey">
             <p>Shipping</p>
             <p>$19</p>
           </div>
@@ -51,7 +122,7 @@
             <p>Total</p>
             <p>$148.98</p>
           </div>
-        </div>1
+        </div>
       </div>
     </div>
     <footer>created by <a href="https://github.com/msn-05">msn-05</a> - <a href="https://devchallenges.io">devchallenges.io</a></footer>
